# RoadRiskLondon

./: .gitignore  AGENTS.md  Dashboard.py  IMPROVEMENT_LOG.md  README.md  RoadRisk_Project_Brief.md  app.py  pyproject.toml  requirements.txt
data/app/: borough_severity_yearly.parquet  collision_points_sample.parquet  hex_or_grid_risk_summary.parquet  historical_road_user_severity_yearly.parquet  historical_trends_yearly.parquet  monitoring_summary.json  priority_locations.parquet  road_base_geometry.parquet  road_risk_meta.json  safety_map_yearly.parquet  (+4 more)
pages/: 1_Safety_Map.py  2_Historical_Trends.py  3_Borough_Overview.py  4_Collision_Severity_Factors.py  5_Model_Evaluation.py  5_Trip_Risk.py  6_Model_Monitoring.py  7_Methodology.py  9_Collision_Typologies.py
scripts/: 01_download_data.py  02_inspect_schema.py  03_build_processed_data.py  04_build_historical_trends.py  05_build_features.py  06_train_model.py  07_build_app_artifacts.py  08_run_all_checks.py  09_train_typologies.py  10_evaluate_clusters.py  12_build_london_traffic.py  13_build_hourly_traffic_profiles.py  14_fetch_london_roads.py  15_build_road_risk.py
tests/: conftest.py  test_app_artifacts.py  test_app_readiness.py  test_config.py  test_features.py  test_historical_trends.py  test_hourly_profiles.py  test_london_filter.py  test_model_evaluate.py  test_model_explain.py  test_model_monitor.py  test_model_training.py  test_prediction.py  test_priority_score.py  test_processed_data.py  test_road_risk.py  test_run_all_checks.py  test_schema_inspection.py  test_streamlit_boundaries.py  test_target.py
(+40 files in other folders)
