[project]
name = "roadrisk-london"
version = "0.1.0"
description = "Data-first Streamlit and scikit-learn road-safety risk app for London."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
